NN-2512 spring 5 update improvements

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,6 +80,9 @@ elite2api:
     clientId: whereabouts-api-client
     clientSecret: clientsecret
 
+codec:
+  max-in-memory-size: 10MB
+
 graceful:
   shutdown.enabled: false
 
