--- a/build.gradle
+++ b/build.gradle
@@ -140,8 +140,6 @@ dependencies {
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
     implementation 'net.sf.ehcache:ehcache:2.10.6'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
@@ -163,6 +161,7 @@ dependencies {
     testImplementation 'org.testcontainers:localstack:1.12.5'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
+    testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     compile configurations.agentDeps
 }
