NN-2512 spring 5 fix env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,11 @@ info.app.version=1.0
 logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
 azure.application-insights.web.enable-W3C=true
 courts=Kingston upon Thames,Westminster,Southwark,City of London,Wimbledon
-
-elite2.uri.root=http://localhost:8080
-elite2.api.uri.root=${elite2.uri.root}/api
-
-auth.endpoint.url=http://localhost:9090/auth
+elite2api.endpoint.url=http://localhost:8080
+elite2.api.uri.root=${elite2api.endpoint.url}/api
+oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
-
-api.health-timeout-ms: 1000
-
+api.health-timeout-ms:1000
 management.endpoints.web.base-path=/
 management.endpoint.health.show-components=always
 management.endpoint.health.show-details=always
