--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,8 +10,8 @@ elite2api:
   host: localhost
   port: 8999
 
-elite2:
-  uri.root: http://localhost:8999
+elite2api:
+  endpoint.url: http://localhost:8999
 
 casenotes:
   endpoint.url: http://localhost:8093
