--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ elite2api.endpoint.url=http://localhost:8080
 elite2.api.uri.root=${elite2api.endpoint.url}/api
 oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
-api.health-timeout-ms:1000
+api.health-timeout-ms=1000
 management.endpoints.web.base-path=/
 management.endpoint.health.show-components=always
 management.endpoint.health.show-details=always
