--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -1,4 +1,5 @@
 ---
 secrets:
-  APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue 
+  APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue
+  OAUTH_CLIRNT_ID: someclientid
   OAUTH_CLIENT_SECRET: someclientsecret
