NN-2512 adjust secret env variable names

--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -1,5 +1,5 @@
 ---
 secrets:
   APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue
-  OAUTH_CLIRNT_ID: someclientid
+  OAUTH_CLIENT_ID: someclientid
   OAUTH_CLIENT_SECRET: someclientsecret
