NN-2512 use correct client secret env values (#150)
* NN-2512 adjust secret env variable names

* NN-2512 adjust secret env variable names

--- a/helm_deploy/secrets-example.yaml
+++ b/helm_deploy/secrets-example.yaml
@@ -1,4 +1,5 @@
 ---
 secrets:
-  APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue 
+  APPINSIGHTS_INSTRUMENTATIONKEY: somesecretvalue
+  OAUTH_CLIENT_ID: someclientid
   OAUTH_CLIENT_SECRET: someclientsecret
