--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,3 +4,7 @@ spring:
       resourceserver:
         jwt:
           public-key-location: classpath:local-public-key.pub
+oauth:
+  client:
+    id: whereabouts-api-client
+    secret: clientsecret
