--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ management.endpoints.web.base-path=/
 management.endpoint.health.show-components=always
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=info,health,ping
+spring.codex.max-in-memory-size=10MB
