--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'groovy'
-    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.3.2.1'
+    id 'org.owasp.dependencycheck' version '5.3.0'
     id 'com.github.ben-manes.versions' version '0.28.0'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.61'
@@ -93,6 +93,7 @@ dependencyManagement {
         mavenBom(SpringBootPlugin.BOM_COORDINATES)
     }
 }
+ext ['spring-security.version'] = '5.3.0.RELEASE' // Updated since spring-boot-starter-oauth2-resource-server-2.2.5.RELEASE only pulls in 5.2.2.RELEASE (still affected by CVE-2018-1258 though)
 
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -103,8 +104,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
 
     runtime 'com.h2database:h2:1.4.200'
-    runtime 'org.flywaydb:flyway-core:6.3.3'
-    runtime 'org.postgresql:postgresql:42.2.12'
+    runtime 'org.flywaydb:flyway-core:6.2.4'
+    runtime 'org.postgresql:postgresql:42.2.10'
 
     implementation 'org.hibernate:hibernate-java8'
 
@@ -118,7 +119,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-oauth2-jose'
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
-    implementation 'com.nimbusds:nimbus-jose-jwt:8.14'
+    implementation 'com.nimbusds:nimbus-jose-jwt:8.10' // pinned due to CVE-2019-17195 in 7.8.1 brought in by spring-boot-starter-oauth2-resource-server-2.2.5.RELEASE
 
     implementation 'org.apache.camel:camel-spring-boot:2.25.0'
 
@@ -127,7 +128,7 @@ dependencies {
     implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.0-BETA'
     agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.0-BETA'
 
-    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.1'
+    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
@@ -155,7 +156,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.14.0'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.2'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
     testImplementation 'org.testcontainers:localstack:1.12.5'
 
