--- a/build.gradle
+++ b/build.gradle
@@ -93,8 +93,6 @@ dependencyManagement {
         mavenBom(SpringBootPlugin.BOM_COORDINATES)
     }
 }
-ext ['spring-security.version'] = '5.3.0.RELEASE' // Updated since spring-boot-starter-oauth2-resource-server-2.2.5.RELEASE only pulls in 5.2.2.RELEASE (still affected by CVE-2018-1258 though)
-
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
@@ -115,10 +113,11 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.security:spring-security-oauth2-jose'
-    
+    // Pinned to 5.2.3 due to CVE-2018-1258
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:5.2.3'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:5.2.3'
+    implementation 'org.springframework.security:spring-security-oauth2-jose:5.2.3'
+
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
 
