--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,10 @@ plugins {
     id 'groovy'
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.3.2.1'
+    id 'org.owasp.dependencycheck' version '5.3.2'
     id 'com.github.ben-manes.versions' version '0.28.0'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.71'
-    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.61'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.71'
 }
 
 apply plugin: "kotlin-allopen"
@@ -93,6 +93,9 @@ dependencyManagement {
         mavenBom(SpringBootPlugin.BOM_COORDINATES)
     }
 }
+
+ext ['spring-security.version'] = '5.3.0.RELEASE' // Updated since spring-boot-starter-oauth2-resource-server-2.2.5.RELEASE only pulls in 5.2.2.RELEASE (still affected by CVE-2018-1258 though)
+
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
@@ -113,10 +116,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // Pinned to 5.2.3 due to CVE-2018-1258
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:5.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:5.2.3'
-    implementation 'org.springframework.security:spring-security-oauth2-jose:5.2.3'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.security:spring-security-oauth2-jose'
 
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
@@ -128,7 +130,7 @@ dependencies {
     implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.0-BETA'
     agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.0-BETA'
 
-    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.0'
+    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.1'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
