--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,15 @@ import java.time.LocalDate
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'groovy'
     id 'org.springframework.boot' version '2.2.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-    id 'org.owasp.dependencycheck' version '5.3.2'
+    id 'org.owasp.dependencycheck' version '5.3.2.1'
     id 'com.github.ben-manes.versions' version '0.28.0'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.71'
-    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.71'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.72'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.72'
+    id 'se.patrikerdes.use-latest-versions' version '0.2.13'
 }
 
 apply plugin: "kotlin-allopen"
@@ -94,7 +95,7 @@ dependencyManagement {
     }
 }
 
-ext ['spring-security.version'] = '5.3.0.RELEASE' // Updated since spring-boot-starter-oauth2-resource-server-2.2.5.RELEASE only pulls in 5.2.2.RELEASE (still affected by CVE-2018-1258 though)
+ext ['spring-security.version'] = '5.3.1.RELEASE' // Pinned to resolve CVE-2019-17195
 
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -105,8 +106,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
 
     runtime 'com.h2database:h2:1.4.200'
-    runtime 'org.flywaydb:flyway-core:6.2.4'
-    runtime 'org.postgresql:postgresql:42.2.10'
+    runtime 'org.flywaydb:flyway-core:6.3.3'
+    runtime 'org.postgresql:postgresql:42.2.12'
 
     implementation 'org.hibernate:hibernate-java8'
 
@@ -123,18 +124,18 @@ dependencies {
     implementation 'org.springframework:spring-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
 
-    implementation 'org.apache.camel:camel-spring-boot:2.25.0'
+    implementation 'org.apache.camel:camel-spring-boot:3.0.1'
 
     implementation 'net.logstash.logback:logstash-logback-encoder:6.3'
-    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.0-BETA'
-    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.0-BETA'
-    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.0-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.1-BETA'
+    implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.1-BETA'
+    agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.1-BETA'
 
     implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.1'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
-    implementation 'com.sun.xml.bind:jaxb-impl:2.3.3-b02'
+    implementation 'com.sun.xml.bind:jaxb-impl:3.0.0-M1'
     implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.transaction:javax.transaction-api:1.3'
@@ -143,13 +144,13 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
     implementation 'net.sf.ehcache:ehcache:2.10.6'
-    implementation 'org.apache.commons:commons-lang3:3.9'
+    implementation 'org.apache.commons:commons-lang3:3.10'
     implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.10.3'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.10.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0.rc1'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0.rc1'
     implementation 'com.pauldijou:jwt-core_2.11:4.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.guava:guava:28.2-jre'
+    implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     implementation 'org.springframework:spring-jms'
@@ -157,10 +158,10 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.github.http-builder-ng:http-builder-ng-apache:1.0.4'
-    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.14.0'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.2'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.17.0'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'org.testcontainers:localstack:1.12.5'
+    testImplementation 'org.testcontainers:localstack:1.14.0'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
