--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
     id 'groovy'
-    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'org.springframework.boot' version '2.2.7.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'org.owasp.dependencycheck' version '5.3.2.1'
     id 'com.github.ben-manes.versions' version '0.28.0'
@@ -106,7 +106,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.12'
 
     runtime 'com.h2database:h2:1.4.200'
-    runtime 'org.flywaydb:flyway-core:6.3.3'
+    runtime 'org.flywaydb:flyway-core:6.4.1'
     runtime 'org.postgresql:postgresql:42.2.12'
 
     implementation 'org.hibernate:hibernate-java8'
@@ -131,12 +131,12 @@ dependencies {
     implementation 'com.microsoft.azure:applicationinsights-logging-logback:2.6.1-BETA'
     agentDeps 'com.microsoft.azure:applicationinsights-agent:2.6.1-BETA'
 
-    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.1'
+    implementation 'com.github.timpeeters:spring-boot-graceful-shutdown:2.2.2'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
-    implementation 'com.sun.xml.bind:jaxb-impl:3.0.0-M1'
-    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+    implementation 'com.sun.xml.bind:jaxb-impl:3.0.0-M2'
+    implementation 'com.sun.xml.bind:jaxb-core:3.0.0-M2'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.transaction:javax.transaction-api:1.3'
 
@@ -146,8 +146,8 @@ dependencies {
     implementation 'net.sf.ehcache:ehcache:2.10.6'
     implementation 'org.apache.commons:commons-lang3:3.10'
     implementation 'org.apache.commons:commons-text:1.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0.rc1'
-    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0.rc1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0'
     implementation 'com.pauldijou:jwt-core_2.11:4.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:29.0-jre'
@@ -161,7 +161,7 @@ dependencies {
     testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.17.0'
     testImplementation 'com.github.tomakehurst:wiremock-standalone:2.26.3'
     testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.6.0'
-    testImplementation 'org.testcontainers:localstack:1.14.0'
+    testImplementation 'org.testcontainers:localstack:1.14.1'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
