DT-868 Switch to Spring graceful shutdown

--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -3,4 +3,4 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-graceful.shutdown.enabled=true
+server.shudtdown.grace-period=30s
