--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,7 @@ dependencies {
     implementation 'com.sun.xml.bind:jaxb-core:3.0.0-M3'
     implementation 'javax.activation:activation:1.1.1'
     implementation 'javax.transaction:javax.transaction-api:1.3'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
 
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
