--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - SPRING_PROFILES_ACTIVE=nomis-hsqldb
 
   offender-case-notes:
-    image: mojdigitalstudio/offender-case-notes:latest
+    image: quay.io/hmpps/offender-case-notes:latest
     container_name: offender-case-notes
     depends_on:
       - elite2
