DT-917: Enable liveness and readiness health probes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,6 +71,9 @@ management:
     info:
       cache:
         time-to-live: 2000ms
+  health.:
+    probes:
+      enabled: true
 
 sqs:
   provider: aws
