DT-917: Switch to hmpps gradle plugin and orb (#182)
* DT-917: Switch to hmpps gradle plugin and orb

* DT-917: Fix ping test due to changes to health/ping

* DT-917: Revert exception fix after security upgrade

* DT-917: Fix references to quay image

* DT-917: Enable liveness and readiness health probes

* DT-917: Enable liveness and readiness health probes

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -4,7 +4,7 @@
 replicaCount: 2
 
 image:
-  repository: docker.io/mojdigitalstudio/whereabouts-api
+  repository: quay.io/hmpps/whereabouts-api
   tag: latest
   port: 8080
 
