--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -17,12 +17,12 @@ ingress:
   path: /
 
 env:
-  ELITE2API_ENDPOINT_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/elite2api"
-  OAUTH_ENDPOINT_URL: "https://gateway.preprod.nomis-api.service.justice.gov.uk/auth"
+  ELITE2API_ENDPOINT_URL: "https://api-preprod.prison.service.justice.gov.uk"
+  OAUTH_ENDPOINT_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
   CASENOTES_ENDPOINT_URL: "https://preprod.offender-case-notes.service.justice.gov.uk"
   JAVA_OPTS: "-Xmx512m"
   OAUTH_CLIENT_ID: "whereabouts-api-client"
-  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/auth/.well-known/jwks.json"
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
 
 whitelist:
   office: "217.33.148.210/32"
