--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -17,12 +17,12 @@ ingress:
   path: /
 
 env:
-  ELITE2API_ENDPOINT_URL: "https://gateway.nomis-api.service.justice.gov.uk/elite2api"
-  OAUTH_ENDPOINT_URL: "https://gateway.nomis-api.service.justice.gov.uk/auth"
+  ELITE2API_ENDPOINT_URL: "https://api.prison.service.justice.gov.uk"
+  OAUTH_ENDPOINT_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
   CASENOTES_ENDPOINT_URL: "https://offender-case-notes.service.justice.gov.uk"
   JAVA_OPTS: "-Xmx512m"
   OAUTH_CLIENT_ID: "whereabouts-api-client"
-  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://gateway.nomis-api.service.justice.gov.uk/auth/.well-known/jwks.json"
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
 
 
 whitelist:
