--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,12 +68,16 @@ management:
         time-to-live: 2000ms
       show-components: always
       show-details: always
+      probes:
+        enabled: true
+      group:
+        liveness:
+          include: livenessStateProbeIndicator
+        readiness:
+          include: readinessStateProbeIndicator
     info:
       cache:
         time-to-live: 2000ms
-  health:
-    probes:
-      enabled: true
 
 sqs:
   provider: aws
