--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -38,11 +38,10 @@ spring:
           public-key-location: classpath:local-public-key.pub
 
 sqs:
-  provider: embedded-localstack
+  provider: localstack
   endpoint.url: http://localhost:4576
   queue.name: whereabouts_api_queue
   dlq.name: whereabouts_api_dlq
-
 
 
 courts: Test Court 1,Test Court 2
