--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ elite2.api.uri.root=${elite2api.endpoint.url}/api
 oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
 api.health-timeout-ms=1000
+
+ignore-version-outputter=true
