DCS-752 adding new courts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ info.app.name=HMPPS Whereabouts API
 info.app.version=1.0
 logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
 azure.application-insights.web.enable-W3C=true
-courts=Kingston upon Thames,Westminster,Southwark,City of London,Wimbledon
+
+courts=Cheltenham,City of London,Coventry,Dudley,Hereford Crown,Hereford Magistrates,Kidderminster,Kingston upon Thames,Leamington,Redditch,Shrewsbury Crown,Shrewsbury Magistrates,Southwark,Telford,Walsall,Warwick,Westminster,Wimbledon,Wolverhampton,Worcester Crown,Worcester Magistrates
+
 elite2api.endpoint.url=http://localhost:8080
 elite2.api.uri.root=${elite2api.endpoint.url}/api
 oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
 api.health-timeout-ms=1000
+
