DCS-770 Adding additonal courts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ info.app.version=1.0
 logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
 azure.application-insights.web.enable-W3C=true
 
-courts=Bromley,Cheltenham,City of London,Coventry,Croydon Crown,Croydon Magistrates,Dudley,Hereford Crown,Hereford Magistrates,Inner London,Kidderminster,Kingston upon Thames,Leamington,Redditch,Shrewsbury Crown,Shrewsbury Magistrates,Southwark,Telford,Thames,Walsall,Warwick,Westminster,Wimbledon,Wolverhampton,Wood Green,Woolwich,Worcester Crown,Worcester Magistrates
+courts=Birmingham Immigration,Bromley,Cheltenham,City of London,Coventry Crown,Coventry Magistrates,Croydon Crown,Croydon Magistrates,Dudley,Hereford Crown,Hereford Magistrates,Inner London,Kidderminster,Kingston upon Thames,Leamington,Redditch,Shrewsbury Crown,Shrewsbury Magistrates,Southwark,Telford,Thames,Walsall,Warwick,Westminster,Wimbledon,Wolverhampton Crown,Wolverhampton Magistrates,Wood Green,Woolwich,Worcester Crown,Worcester Magistrates
 
 elite2api.endpoint.url=http://localhost:8080
 elite2.api.uri.root=${elite2api.endpoint.url}/api
