--- a/helm_deploy/whereabouts-api/templates/secrets.yaml
+++ b/helm_deploy/whereabouts-api/templates/secrets.yaml
@@ -6,5 +6,6 @@ metadata:
     {{- include "app.labels" . | nindent 4 }}
 type: Opaque
 data:
-  APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.secrets.APPINSIGHTS_INSTRUMENTATIONKEY | b64enc | quote }}
-  OAUTH_CLIENT_SECRET: {{ .Values.secrets.OAUTH_CLIENT_SECRET | b64enc | quote }}
+  {{- range $key, $value := .Values.secrets }}
+  {{ $key }}: {{ $value | b64enc | quote }}
+  {{- end }}
