--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,7 +98,7 @@ workflows:
           requires:
             - request-prod-approval
 
-  scheduled:
+  security:
     triggers:
       - schedule:
           cron: "0 7 * * 1-5"
@@ -108,5 +108,8 @@ workflows:
                 - main
     jobs:
       - hmpps/gradle_owasp_dependency_check:
+          context:
+            - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
           context:
             - hmpps-common-vars
