DCS-888 Book a Video Link - Analytics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: whereabouts-api
   jpa:
+    open-in-view: false
     show-sql: false
     generate-ddl: false
     hibernate:
