NN-3373: - Add new endpoint to return appointment details, enhanced with video link bookings

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,12 @@ spring:
   codec:
     max-in-memory-size: 10MB
 
+
+  profiles:
+    group:
+      test:
+        - "dev"
+
 server:
   port: 8082
   servlet:
