--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@ info.app.version=1.0
 logging.uris.exclude.regex=/health|/info|/ping|/swagger.*|/webjars/.*|/v2/api-docs
 azure.application-insights.web.enable-W3C=true
 
-courts=Birmingham Immigration,Bromley,Caernarfon County,Caernarfon Crown,Caernarfon Magistrates,Cheltenham,City of London,Coventry Crown,Coventry Magistrates,Croydon Crown,Croydon Magistrates,Derby,Dudley,Hereford Crown,Hereford Magistrates,Inner London,Kidderminster,Kingston upon Thames,Leamington,Llandrindod Wells Justice Centre,Llandudno,Mold Crown,Mold County,Mold Magistrates,Prestatyn County,Redditch,Shrewsbury Crown,Shrewsbury Magistrates,South Derbyshire,Southwark,Telford,Thames,Walsall,Warwick,Welshpool County,Welshpool Magistrates,Westminster,Wimbledon,Wolverhampton Crown,Wolverhampton Magistrates,Wood Green,Woolwich,Worcester Crown,Worcester Magistrates,Wrexham County,Wrexham Magistrates
+courts=Birmingham Immigration,Bromley,Caernarfon County,Caernarfon Crown,Caernarfon Magistrates,Cheltenham,Chesterfield Justice Centre,City of London,Coventry Crown,Coventry Magistrates,Croydon Crown,Croydon Magistrates,Derby Crown,Derby Justice Centre,Dudley,Hereford Crown,Hereford Magistrates,Inner London,Kidderminster,Kingston upon Thames,Leamington,Llandrindod Wells Justice Centre,Llandudno,Mansfield Justice Centre,Mold County,Mold Crown,Mold Magistrates,Nottingham Crown,Nottingham Justice Centre,Prestatyn County,Redditch,Shrewsbury Crown,Shrewsbury Magistrates,South Derbyshire,Southwark,Telford,Thames,Walsall,Warwick,Welshpool County,Welshpool Magistrates,Westminster,Wimbledon,Wolverhampton Crown,Wolverhampton Magistrates,Wood Green,Woolwich,Worcester Crown,Worcester Magistrates,Wrexham County,Wrexham Magistrates
 
-courtIds=BROMMC,CRNRCT,CRNRCC,CRNHMC,CHELMC,CITYMC,CVNTCC,CVNTMC,CRYDCC,CRYDMC,DRBYCC,DUDLMC,HERFCC,HERFMC,INNRCC,KIDDMC,KNGTCC,LEAMMC,LLNWMC,LLDUMC,MOLDCC,MOLDCT,MOLDMC,PRSTMC,RDDTMC,SHRWCC,SHREMC,DRBYMC,STHWCC,TELFMC,THMSMC,WALSMC,WRWKCC,WLSHCT,WLSHMC,CRT034,WMBLMC,WLVRCC,WLVRMC,WDGRCC,WOOLCC,WRCSCC,WRCSMC,WREXCT,WREXMC
-
-
+# Currently missing Birmingham immigration BIRAIT as not in court register
+courtIds=BIRAIT,BROMMC,CHELMC,CHSTMC,CITYMC,CRNHMC,CRNRCC,CRNRCT,CRT034,CRYDCC,CRYDMC,CVNTCC,CVNTMC,DRBYCC,DRBYMC,DRBYMC,DUDLMC,HERFCC,HERFMC,INNRCC,KIDDMC,KNGTCC,LEAMMC,LLDUMC,LLNWMC,MNSFMC,MOLDCC,MOLDCT,MOLDMC,NOTTCC,NOTTMC,PRSTMC,RDDTMC,SHREMC,SHRWCC,STHWCC,TELFMC,THMSMC,WALSMC,WDGRCC,WLSHCT,WLSHMC,WLVRCC,WLVRMC,WMBLMC,WOOLCC,WRCSCC,WRCSMC,WREXCT,WREXMC,WRWKCC
 
 elite2api.endpoint.url=http://localhost:8080
 elite2.api.uri.root=${elite2api.endpoint.url}/api
