--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,3 +84,8 @@ management:
 sqs:
   provider: aws
   endpoint.region: eu-west-2
+
+video-link-booking:
+  day-start: '09:00'
+  day-end: '16:00'
+  step: 'PT15M'
