--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,6 +86,6 @@ sqs:
   endpoint.region: eu-west-2
 
 video-link-booking:
-  day-start: '09:00'
-  day-end: '16:00'
-  step: 'PT15M'
+  day-start: "09:00"
+  day-end: "16:00"
+  step: "PT15M"
