DCS-1042 End point for finding Video Link Booking availability and alternatives.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,7 +86,8 @@ sqs:
   endpoint.region: eu-west-2
 
 video-link-booking:
-  day-start: "09:00"
-  day-end: "16:00"
-  step: "PT15M"
-  max-alternatives: 3
+  booking-options-finder:
+    day-start: "09:00"
+    day-end: "16:00"
+    step: "PT15M"
+    max-alternatives: 3
