DCS-1042 End point for finding Video Link Booking availability. (#326)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,3 +84,10 @@ management:
 sqs:
   provider: aws
   endpoint.region: eu-west-2
+
+video-link-booking:
+  booking-options-finder:
+    day-start: "09:00"
+    day-end: "16:00"
+    step: "PT15M"
+    max-alternatives: 3
