Update to Moorland Whereabouts config
Moorland changed the name of one of their units (what was called the CASU is now the Segregation Unit). This is to update the Whereabouts config so it works for them.

--- a/src/main/resources/whereabouts/patterns/MDI.properties
+++ b/src/main/resources/whereabouts/patterns/MDI.properties
@@ -23,4 +23,4 @@ MDI_Houseblock\ 6_A-Wing=MDI-6-1-0([012][0-9]),MDI-6-2-0([012][0-9]|30),MDI-6-3-
 MDI_Houseblock\ 6_B-Wing=MDI-6-1-0([345][0-9]),MDI-6-2-0(3[1-9]|[456][0-9]),MDI-6-3-0(3[1-9]|[456][0-9])
 MDI_Houseblock\ 7=MDI-7-.+
 MDI_Houseblock\ 8=MDI-8-.+
-MDI_Casu=MDI-MCASU-CASU.+
+MDI_Segregation\ Unit=MDI-SEG-.+
