--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -3,3 +3,11 @@
 
 generic-prometheus-alerts:
   targetApplication: whereabouts-api
+
+ingress:
+  # live-1 is blue, live is green
+  contextColour: blue
+  annotations:
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
+    nginx.ingress.kubernetes.io/custom-http-errors: "418"
+
