NN-3921: Use new Postgres dialect for JPA
Without this we got auto-generated value errors

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: none
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
 
   flyway:
     enabled: true
