Update to add two res locations to Isle of Wight

--- a/src/main/resources/whereabouts/patterns/groups.properties
+++ b/src/main/resources/whereabouts/patterns/groups.properties
@@ -5,6 +5,11 @@ IWI_Houseblock\ 11_Landing\ 1=IWI-HB11-1-.+
 IWI_Houseblock\ 11_Landing\ 2=IWI-HB11-2-.+
 IWI_Houseblock\ 11_Landing\ 3=IWI-HB11-3-.+
 IWI_Houseblock\ 11_Landing\ 4=IWI-HB11-4-.+
+IWI_Houseblock\ 12=IWI-HB12-.+
+IWI_Houseblock\ 12_Landing\ 1=IWI-HB12-1-.+
+IWI_Houseblock\ 12_Landing\ 2=IWI-HB12-2-.+
+IWI_Houseblock\ 12_Landing\ 3=IWI-HB12-3-.+
+IWI_Houseblock\ 12_Landing\ 4=IWI-HB12-4-.+
 IWI_Houseblock\ 13=IWI-HB13-.+
 IWI_Houseblock\ 13_Landing\ 2=IWI-HB13-2-.+
 IWI_Houseblock\ 13_Landing\ 3=IWI-HB13-3-.+
@@ -41,6 +46,11 @@ IWI_Houseblock\ 21_Landing\ 2=IWI-HB21-2-.+
 IWI_Houseblock\ 21_Landing\ 3=IWI-HB21-3-.+
 IWI_Houseblock\ 21_Landing\ 4=IWI-HB21-4-.+
 IWI_Houseblock\ 21_Landing\ 5=IWI-HB21-5-.+
+IWI_Houseblock\ 22=IWI-HB22-.+
+IWI_Houseblock\ 22_Landing\ 1=IWI-HB22-1-.+
+IWI_Houseblock\ 22_Landing\ 2=IWI-HB22-2-.+
+IWI_Houseblock\ 22_Landing\ 3=IWI-HB22-3-.+
+IWI_Houseblock\ 22_Landing\ 4=IWI-HB22-4-.+
 IWI_Houseblock\ 23=IWI-HB23-.+
 IWI_Houseblock\ 23_Landing\ 1=IWI-HB23-1-.+
 IWI_Houseblock\ 23_Landing\ 2=IWI-HB23-2-.+
