Update Hewell's Whereabouts Config file

--- a/src/main/resources/whereabouts/patterns/HEI.properties
+++ b/src/main/resources/whereabouts/patterns/HEI.properties
@@ -18,8 +18,7 @@ HEI_Houseblock\ 5=HEI-5-.+
 HEI_Houseblock\ 6=HEI-6-.+
 HEI_Houseblock\ 6_A-Spur=HEI-6-[1-3]-A-.*
 HEI_Houseblock\ 6_B-Spur=HEI-6-[1-3]-B-.*
-HEI_The\ Grange=HEI-8-.+
-HEI_Inpatients\ &\ Outpatients=HEI-H-1-.+
+HEI_Oak\ Unit=HEI-OAK-1-.*
 HEI_Segregation\ Unit=HEI-S-.+
 HEI_Segregation\ Unit_Landing\ 1=HEI-S-1-.+
 HEI_Segregation\ Unit_Landing\ 2=HEI-S-2-.+
