--- a/src/main/resources/whereabouts/patterns/HEI.properties
+++ b/src/main/resources/whereabouts/patterns/HEI.properties
@@ -5,6 +5,7 @@ HEI_Houseblock\ 1_B-Spur=HEI-1-1-B-0(1[3-9]|2[0-6]),HEI-1-2-B-0(1[3-9]|2[0-6]),H
 HEI_Houseblock\ 1_C-Spur=HEI-1-1-C-0(2[7-9]|3[0-8]),HEI-1-2-C-0(2[7-9]|3[0-8]),HEI-1-3-C-0(2[7-9]|3[0-8])
 HEI_Houseblock\ 2=HEI-2-.+
 HEI_Houseblock\ 2_A-Spur=HEI-2-1-A-0(0[1-9]|1[0-2]),HEI-2-2-A-0(0[1-9]|1[0-2]),HEI-2-3-A-0(0[1-9]|1[0-2])
+HEI_Houseblock\ 2_B-Spur=HEI-2-1-B-0(1[3-9]|2[0-5]),HEI-2-2-B-0(1[3-9]|2[0-6]),HEI-2-3-B-0(1[3-9]|2[0-6])
 HEI_Houseblock\ 2_C-Spur=HEI-2-1-C-0(2[6-9]|3[0-8]),HEI-2-2-C-0(2[7-9]|3[0-8]),HEI-2-3-C-0(2[7-9]|3[0-8])
 HEI_Houseblock\ 3=HEI-3-.+
 HEI_Houseblock\ 3_A-Spur=HEI-3-1-A-0(0[1-9]|1[0-2]),HEI-3-2-A-0(0[1-9]|1[0-2]),HEI-3-3-A-0(0[1-9]|1[0-2])
