NN-3987 upping the amount of memory containers can take before being OOMKilled

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -11,3 +11,8 @@ ingress:
     external-dns.alpha.kubernetes.io/aws-weight: "100"
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
 
+resources:
+  limits:
+    memory: 2Gi
+  requests:
+    memory: 512Mi
