Update to Whereabouts config file to fix IoW

--- a/src/main/resources/whereabouts/patterns/groups.properties
+++ b/src/main/resources/whereabouts/patterns/groups.properties
@@ -11,10 +11,10 @@ IWI_Houseblock\ 12_Landing\ 2=IWI-HB12-2-.+
 IWI_Houseblock\ 12_Landing\ 3=IWI-HB12-3-.+
 IWI_Houseblock\ 12_Landing\ 4=IWI-HB12-4-.+
 IWI_Houseblock\ 13=IWI-HB13-.+
+IWI_Houseblock\ 13_Landing\ 1=IWI-HB13-1-.+
 IWI_Houseblock\ 13_Landing\ 2=IWI-HB13-2-.+
 IWI_Houseblock\ 13_Landing\ 3=IWI-HB13-3-.+
 IWI_Houseblock\ 13_Landing\ 4=IWI-HB13-4-.+
-IWI_Houseblock\ 13_Landing\ I=IWI-HB13-I-.+
 IWI_Houseblock\ 14=IWI-HB14-.+
 IWI_Houseblock\ 14_Landing\ 1=IWI-HB14-1-.+
 IWI_Houseblock\ 14_Landing\ 2=IWI-HB14-2-.+
