--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@3.14
+  hmpps: ministryofjustice/hmpps@5.1.0
 jobs:
   validate:
     executor:
       name: hmpps/localstack
-      jdk_tag: "17.0"
+      jdk_tag: "18.0"
       localstack_tag: "0.12.9.1"
       services: "sqs"
     environment:
@@ -107,10 +107,11 @@ workflows:
       - hmpps/trivy_latest_scan:
           context:
             - hmpps-common-vars
-      - hmpps/veracode_pipeline_scan:
-          context:
-            - hmpps-common-vars
-            - veracode-credentials
+      # disabled as currently no support for java 18
+      #- hmpps/veracode_pipeline_scan:
+      #    context:
+      #      - hmpps-common-vars
+      #      - veracode-credentials
   security-weekly:
     triggers:
       - schedule:
