--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -1,34 +1,14 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+generic-service:
+  replicaCount: 2
 
-image:
-  repository: quay.io/hmpps/whereabouts-api
-  tag: latest
-  port: 8080
+  ingress:
+    host: whereabouts-api-dev.service.justice.gov.uk
 
-ingress:
-  enabled: true
-  enable_whitelist: true
-  hosts:
-    - host: whereabouts-api-dev.service.justice.gov.uk
-      cert_secret: whereabouts-api-cert
-  path: /
-
-env:
-  ELITE2API_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
-  OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
-  CASENOTES_ENDPOINT_URL: "https://dev.offender-case-notes.service.justice.gov.uk"
-  JAVA_OPTS: "-Xmx512m"
-  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
-
-whitelist:
-  office: "217.33.148.210/32"
-  health-kick: "35.177.252.195/32"
-  mojvpn: "81.134.202.29/32"
-  cloudplatform-live1-1: "35.178.209.113/32"
-  cloudplatform-live1-2: "3.8.51.207/32"
-  cloudplatform-live1-3: "35.177.252.54/32"
-  petty-france-wifi: "213.121.161.112/28"
-  global-protect: "35.176.93.186/32"
+  env:
+    ELITE2API_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
+    OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
+    CASENOTES_ENDPOINT_URL: "https://dev.offender-case-notes.service.justice.gov.uk"
+    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
