NN-4278 put back other settings

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -7,6 +7,11 @@ generic-service:
     tag: latest
     port: 8080
 
+  ingress:
+    enabled: true
+    host: app-hostname.local
+    tlsSecretName: whereabouts-api-cert
+
   env:
     JAVA_OPTS: "-Xmx512m"
     SPRING_PROFILES_ACTIVE: "postgres,logstash"
