--- a/helm_deploy/whereabouts-api/templates/ingress_v1_2.yaml
+++ b/helm_deploy/whereabouts-api/templates/ingress_v1_2.yaml
@@ -1,15 +1,16 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "app.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
+{{- $ingressName := print $fullName "-v1-2" }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: whereabouts-api-new
+  name: {{ $ingressName }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
   annotations:
     {{ if .Values.ingress.enable_whitelist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.whitelist | quote }}{{ end }}
-    external-dns.alpha.kubernetes.io/set-identifier: whereabouts-api-new-{{ .Release.Namespace }}-{{ .Values.ingress.contextColour }}
+    external-dns.alpha.kubernetes.io/set-identifier: {{ $ingressName }}-{{ .Release.Namespace }}-{{ .Values.ingress.contextColour }}
     external-dns.alpha.kubernetes.io/aws-weight: "100"
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
 spec:
