--- a/helm_deploy/whereabouts-api/templates/ingress_v1_2.yaml
+++ b/helm_deploy/whereabouts-api/templates/ingress_v1_2.yaml
@@ -14,7 +14,7 @@ metadata:
     external-dns.alpha.kubernetes.io/aws-weight: "100"
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
 spec:
-  ingressClassName: default
+  ingressClassName: "default"
   tls:
   {{- range .Values.ingress.hosts }}
   - hosts:
