DCS-1744: ✨ Add generic-prometheus-alerts for whereabouts SQS

--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -19,3 +19,6 @@ generic-prometheus-alerts:
   alertSeverity: digital-prison-service
   rdsAlertsDatabases:
     cloud-platform-67257a8b15c64e7f: "Whereabouts API"
+  sqsAlertsQueueNames:
+    - "Digital-Prison-Services-prod-whereabouts_api_queue"
+    - "Digital-Prison-Services-prod-whereabouts_api_queue_dl"
