NN-5134: scale PreProd services from 4 to 2

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -2,6 +2,7 @@
 # Declare variables to be passed into your templates.
 
 generic-service:
+  replicaCount: 2
 
   ingress:
     host: whereabouts-api-preprod.service.justice.gov.uk
