HEAT-74: update to use new service account from latest irsa terraform module

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -4,6 +4,8 @@ generic-service:
 
   replicaCount: 4
 
+  serviceAccountName: whereabouts-api
+
   image:
     repository: quay.io/hmpps/whereabouts-api
     tag: app_version    # override at deployment time
