SDIT-1041: 🔧 Move to new dev prison api in cloud platform

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -8,7 +8,7 @@ generic-service:
     host: whereabouts-api-dev.service.justice.gov.uk
 
   env:
-    ELITE2API_ENDPOINT_URL: "https://api-dev.prison.service.justice.gov.uk"
+    ELITE2API_ENDPOINT_URL: "https://prison-api-dev.prison.service.justice.gov.uk"
     OAUTH_ENDPOINT_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
     CASENOTES_ENDPOINT_URL: "https://dev.offender-case-notes.service.justice.gov.uk"
     SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
