NN-5654 disable h2 console for test

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -27,6 +27,9 @@ spring:
       resourceserver:
         jwt:
           public-key-location: classpath:local-public-key.pub
+  h2:
+    console:
+      enabled: false
 
 hmpps.sqs:
   provider: localstack
