MAP-500 add localstack config for new domain event listener

--- a/src/main/resources/application-localstack.yml
+++ b/src/main/resources/application-localstack.yml
@@ -4,3 +4,6 @@ hmpps.sqs:
     whereabouts:
       queueName: whereabouts_api_queue
       dlqName: whereabouts_api_dlq
+    domainevent:
+      queueName: domainevent_api_queue
+      dlqName: domainevent_api_dlq
