--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -11,6 +11,9 @@ generic-service:
     OAUTH_ENDPOINT_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
     CASENOTES_ENDPOINT_URL: "https://offender-case-notes.service.justice.gov.uk"
     SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
+    NOTIFY_ENABLED: true
+    PRISONREGISTER_API_URL: "https://prison-register.hmpps.service.justice.gov.uk"
+
 
   postgresDatabaseRestore:
     enabled: true
