--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -42,6 +42,7 @@ generic-service:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
       OAUTH_CLIENT_ID: "OAUTH_CLIENT_ID"
       OAUTH_CLIENT_SECRET: "OAUTH_CLIENT_SECRET"
+      NOTIFY_API_KEY: "NOTIFY_API_KEY"
     dps-rds-instance-output:
       DATABASE_USERNAME: "database_username"
       DATABASE_PASSWORD: "database_password"
