MAP-465 adding url variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ elite2.api.uri.root=${elite2api.endpoint.url}/api
 oauth.endpoint.url=http://localhost:9090/auth
 casenotes.endpoint.url=http://localhost:8083
 api.health-timeout-ms=1000
-prisonregister.endpoint.url=http://localhost:8084
+prisonregister.endpoint.url=${prisonregister.api.url}
