--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -12,7 +12,7 @@ generic-service:
     CASENOTES_ENDPOINT_URL: "https://offender-case-notes.service.justice.gov.uk"
     SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI: "https://sign-in.hmpps.service.justice.gov.uk/auth/.well-known/jwks.json"
     NOTIFY_ENABLED: true
-    PRISONREGISTER_API_URL: "https://prison-register.hmpps.service.justice.gov.uk"
+    PRISONREGISTER_ENDPOINT_URL: "https://prison-register.hmpps.service.justice.gov.uk"
 
 
   postgresDatabaseRestore:
