need correct dialect

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -34,6 +34,15 @@ spring:
     console:
       enabled: false
 
+  jpa:
+    open-in-view: false
+    show-sql: false
+    generate-ddl: false
+    hibernate:
+      ddl-auto: none
+    database-platform: org.hibernate.dialect.H2Dialect
+
+
 hmpps.sqs:
   provider: localstack
   queues:
