BAVL-41: Migration trigger to select bookings and emit domain events (#719)
* BAVL-41: Endpoint and service structure for migration trigger

* BAVL-41: Trigger migration and emit domain events + tests.

* BAVL-41: Swapped to use the main hearing time for the selection criteria

* BAVL-41: Adding pagination test, configurable page size and option to delay between pages (throttling)

* BAVL-41: Review comments.

* BAVL-41: Add @RequestParam for the 3 query parameters on migration endpoint.

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -15,4 +15,5 @@ generic-service:
     NOTIFY_ENABLED: false
     PRISONREGISTER_ENDPOINT_URL: "https://prison-register-preprod.hmpps.service.justice.gov.uk"
     WHEREABOUTS_DISABLED: RSI,WDI,LPI
+    FEATURE_EVENTS_SNS_ENABLED: true
 
