Revert "BAVL-376 feature toggle should be on. (#737)"
This reverts commit de3d2d106ccc3619569a2f970916efd84c6fb303.

--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -15,7 +15,7 @@ generic-service:
     PRISONREGISTER_ENDPOINT_URL: "https://prison-register.hmpps.service.justice.gov.uk"
     LOCATIONAPI_ENDPOINT_URL: "https://locations-inside-prison-api.hmpps.service.justice.gov.uk"
     WHEREABOUTS_DISABLED: RSI,WDI,LPI,FMI,IWI,WMI,GTI,FKI
-    FEATURE_EVENTS_SNS_ENABLED: true
+    FEATURE_EVENTS_SNS_ENABLED: false
 
   postgresDatabaseRestore:
     enabled: true
