rename-legacy-bvls-toggle

--- a/helm_deploy/whereabouts-api/values.yaml
+++ b/helm_deploy/whereabouts-api/values.yaml
@@ -44,7 +44,7 @@ generic-service:
       OAUTH_CLIENT_SECRET: "OAUTH_CLIENT_SECRET"
       NOTIFY_API_KEY: "NOTIFY_API_KEY"
     feature-toggles:
-      FEATURE_BVLS_ENABLED: "FEATURE_LISTEN_FOR_COURT_EVENTS"
+      FEATURE_LISTEN_FOR_COURT_EVENTS: "FEATURE_LISTEN_FOR_COURT_EVENTS"
       FEATURE_EVENT_WHEREABOUTS_API_VIDEOLINK_MIGRATE: "FEATURE_SEND_VIDEO_BOOKING_MIGRATE_EVENTS"
     dps-rds-instance-output:
       DATABASE_USERNAME: "database_username"
